Refresh .po files

--- a/po/de.po
+++ b/po/de.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-07-29 09:55-0400\n"
+"POT-Creation-Date: 2011-07-29 10:27-0400\n"
 "PO-Revision-Date: 2011-07-25 14:55+0200\n"
 "Last-Translator: Sven Strickroth <email@cs-ware.de>\n"
 "Language-Team: german <de@li.org>\n"
@@ -1151,11 +1151,11 @@ msgstr "Arbeitsspeicher"
 msgid "System swap"
 msgstr "System-Swap"
 
-#: js/messages.php:97 libraries/common.lib.php:1274 server_status.php:1433
+#: js/messages.php:97 libraries/common.lib.php:1274 server_status.php:1422
 msgid "MiB"
 msgstr "MiB"
 
-#: js/messages.php:98 libraries/common.lib.php:1274 server_status.php:1433
+#: js/messages.php:98 libraries/common.lib.php:1274 server_status.php:1422
 msgid "KiB"
 msgstr "KiB"
 
@@ -1196,7 +1196,7 @@ msgstr "Bitte fügen Sie mindestens eine Variable der Serie hinzu"
 #: js/messages.php:110 libraries/display_export.lib.php:306
 #: libraries/display_tbl.lib.php:561 libraries/export/sql.php:1052
 #: libraries/tbl_properties.inc.php:562 pmd_general.php:510
-#: server_privileges.php:2041 server_status.php:1054 server_status.php:1450
+#: server_privileges.php:2041 server_status.php:1054 server_status.php:1439
 msgid "None"
 msgstr "keine"
 
@@ -1300,7 +1300,7 @@ msgstr "Einstellungen ändern"
 msgid "Current settings"
 msgstr "Aktuelle Einstellungen"
 
-#: js/messages.php:135 server_status.php:1393
+#: js/messages.php:135 server_status.php:1382
 msgid "Chart Title"
 msgstr "Schaubild-Titel"
 
@@ -1384,7 +1384,7 @@ msgid "Filter queries by word/regexp:"
 msgstr ""
 
 #: js/messages.php:155
-msgid "Group queries, ignoring variable data in WHERE statements"
+msgid "Group queries, ignoring variable data in WHERE clauses"
 msgstr ""
 
 #: js/messages.php:156
@@ -10015,14 +10015,21 @@ msgid "Monitor Instructions"
 msgstr "Einführung zur Überwachung"
 
 #: server_status.php:1364
+#, fuzzy
+#| msgid ""
+#| "The phpMyAdmin Monitor can assist you in optimizing the server "
+#| "configuration and track down time intensive\n"
+#| "        queries. For the latter you will need to set log_output to "
+#| "'TABLE' and have either the slow_query_log or general_log enabled. Note "
+#| "however, that the\n"
+#| "        general_log produces a lot of data and increases server load by "
+#| "up to 15%"
 msgid ""
 "The phpMyAdmin Monitor can assist you in optimizing the server configuration "
-"and track down time intensive\n"
-"        queries. For the latter you will need to set log_output to 'TABLE' "
-"and have either the slow_query_log or general_log enabled. Note however, "
-"that the\n"
-"        general_log produces a lot of data and increases server load by up "
-"to 15%"
+"and track down time intensive queries. For the latter you will need to set "
+"log_output to 'TABLE' and have either the slow_query_log or general_log "
+"enabled. Note however, that the general_log produces a lot of data and "
+"increases server load by up to 15%"
 msgstr ""
 "Die phpMyAdmin-Überwachung kann Sie bei der Server-Konfiguration, und auch "
 "beim Aufspühren von zeitintensiven Abfragen unterstützen. Für das Letztere "
@@ -10031,19 +10038,29 @@ msgstr ""
 "general_log viele Daten produzieren und die Serverauslastung um bis zu 15% "
 "erhöhen kann."
 
-#: server_status.php:1373
+#: server_status.php:1371
+#, fuzzy
+#| msgid ""
+#| "<b>Using the monitor:</b><br/>\n"
+#| "        Ok, you are good to go! Once you click 'Start monitor' your "
+#| "browser will refresh all displayed charts\n"
+#| "        in a regular interval. You may add charts and change the refresh "
+#| "rate under 'Settings', or remove any chart\n"
+#| "        using the cog icon on each respective chart.\n"
+#| "        <p>When you get to see a sudden spike in activity, select the "
+#| "relevant time span on any chart by holding down the\n"
+#| "        left mouse button and panning over the chart. This will load "
+#| "statistics from the logs helping you find what caused the\n"
+#| "        activity spike.</p>"
 msgid ""
-"<b>Using the monitor:</b><br/>\n"
-"        Ok, you are good to go! Once you click 'Start monitor' your browser "
-"will refresh all displayed charts\n"
-"        in a regular interval. You may add charts and change the refresh "
-"rate under 'Settings', or remove any chart\n"
-"        using the cog icon on each respective chart.\n"
-"        <p>When you get to see a sudden spike in activity, select the "
-"relevant time span on any chart by holding down the\n"
-"        left mouse button and panning over the chart. This will load "
-"statistics from the logs helping you find what caused the\n"
-"        activity spike.</p>"
+"<b>Using the monitor:</b><br/> Ok, you are good to go! Once you click 'Start "
+"monitor' your browser will refresh all displayed charts in a regular "
+"interval. You may add charts and change the refresh rate under 'Settings', "
+"or remove any chart using the cog icon on each respective chart.<p>When you "
+"get to see a sudden spike in activity, select the relevant time span on any "
+"chart by holding down the left mouse button and panning over the chart. This "
+"will load statistics from the logs helping you find what caused the activity "
+"spike.</p>"
 msgstr ""
 "<b>Verwendung der Überwachung:</b><br />\n"
 "OK, Sie sind bereit zum Starten! Sobald Sie 'Überwachung starten' angeklickt "
@@ -10058,15 +10075,22 @@ msgstr ""
 "Statistiken aus den Protokollen laden um Sie bei der Auffindung der \n"
 "Aktivitätsspitze zu unterstützen.</p>"
 
-#: server_status.php:1383
+#: server_status.php:1375
+#, fuzzy
+#| msgid ""
+#| "<b>Please note:</b>\n"
+#| "        Enabling the general_log may increase the server load by 5-15%. "
+#| "Also be aware that generating statistics from the logs is a\n"
+#| "        load intensive task, so it is advisable to select only a small "
+#| "time span and to disable the general_log and empty its table once "
+#| "monitoring is not required any more.\n"
+#| "        "
 msgid ""
-"<b>Please note:</b>\n"
-"        Enabling the general_log may increase the server load by 5-15%. Also "
-"be aware that generating statistics from the logs is a\n"
-"        load intensive task, so it is advisable to select only a small time "
-"span and to disable the general_log and empty its table once monitoring is "
-"not required any more.\n"
-"        "
+"<b>Please note:</b> Enabling the general_log may increase the server load by "
+"5-15%. Also be aware that generating statistics from the logs is a load "
+"intensive task, so it is advisable to select only a small time span and to "
+"disable the general_log and empty its table once monitoring is not required "
+"any more."
 msgstr ""
 "<b>Bitte beachten Sie:</b>\n"
 "Das Aktivieren des general_log kann die Serverlast um 5-15% steigern. Seien "
@@ -10075,79 +10099,79 @@ msgstr ""
 "Zeitraum auszuwählen.\n"
 "        "
 
-#: server_status.php:1396
+#: server_status.php:1385
 msgid "CPU Usage"
 msgstr "CPU-Auslastung"
 
-#: server_status.php:1399
+#: server_status.php:1388
 msgid "Memory Usage"
 msgstr "Speicher-Auslastung"
 
-#: server_status.php:1402
+#: server_status.php:1391
 msgid "Swap Usage"
 msgstr "Auslagerungsdatei-Nutzung"
 
-#: server_status.php:1405
+#: server_status.php:1394
 msgid "Status variable(s)"
 msgstr "Status Variable(n)"
 
-#: server_status.php:1407
+#: server_status.php:1396
 msgid "Select series:"
 msgstr "Serie auswählen:"
 
-#: server_status.php:1409
+#: server_status.php:1398
 msgid "Commonly monitored"
 msgstr "Allgemein-überwacht"
 
-#: server_status.php:1424
+#: server_status.php:1413
 msgid "or type variable name:"
 msgstr "oder Variablen-Namen eingeben:"
 
-#: server_status.php:1428
+#: server_status.php:1417
 msgid "Display as differential value"
 msgstr "Den Wert als Unterschied zeigen"
 
-#: server_status.php:1430
+#: server_status.php:1419
 msgid "Apply a divisor"
 msgstr "Divisor hinzufügen"
 
-#: server_status.php:1437
+#: server_status.php:1426
 msgid "Append unit to data values"
 msgstr "Einheiten an Datenwerte anfügen."
 
-#: server_status.php:1443
+#: server_status.php:1432
 msgid "Add this series"
 msgstr "Diese Serie hinzufügen"
 
-#: server_status.php:1445
+#: server_status.php:1434
 msgid "Clear series"
 msgstr "Serien löschen"
 
-#: server_status.php:1448
+#: server_status.php:1437
 msgid "Series in Chart:"
 msgstr "Serien im Schaubild"
 
-#: server_status.php:1456
+#: server_status.php:1445
 msgid "Loading logs"
 msgstr "Lade Protokolle"
 
-#: server_status.php:1459
+#: server_status.php:1448
 msgid "Log statistics"
 msgstr "Protokoll Statistik"
 
-#: server_status.php:1460
+#: server_status.php:1449
 msgid "Selected time range:"
 msgstr "Ausgewählte Zeit-Spanne:"
 
-#: server_status.php:1465
+#: server_status.php:1454
 msgid "Only retrieve SELECT,INSERT,UPDATE and DELETE Statements"
 msgstr ""
 
-#: server_status.php:1470
+#: server_status.php:1459
 msgid "Remove variable data in INSERT statements for better grouping"
 msgstr ""
 
-#: server_status.php:1473
+#: server_status.php:1462
 msgid ""
 "<p>Choose from which log you want the statistics to be generated from.</p> "
 "Results are grouped by query text."
@@ -10155,20 +10179,20 @@ msgstr ""
 "<p>Bitte wählen Sie das log aus, von dem Statistiken generiert werden "
 "sollen</p> Ergebnisse sind nach Abfrage-Text zusammengefasst."
 
-#: server_status.php:1476
+#: server_status.php:1465
 #, fuzzy
 #| msgid "Query type"
 msgid "Query analyzer"
 msgstr "Abfrageart"
 
-#: server_status.php:1512
+#: server_status.php:1501
 #, php-format
 msgid "%d second"
 msgid_plural "%d seconds"
 msgstr[0] "%d Sekunde"
 msgstr[1] "%d Sekunden"
 
-#: server_status.php:1514
+#: server_status.php:1503
 #, php-format
 msgid "%d minute"
 msgid_plural "%d minutes"
