--- a/po/sl.po
+++ b/po/sl.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-07-29 09:55-0400\n"
+"POT-Creation-Date: 2011-07-29 10:27-0400\n"
 "PO-Revision-Date: 2011-07-22 11:14+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
@@ -1149,11 +1149,11 @@ msgstr "Sistemski pomnilnik"
 msgid "System swap"
 msgstr "Sistemska izmenjava"
 
-#: js/messages.php:97 libraries/common.lib.php:1274 server_status.php:1433
+#: js/messages.php:97 libraries/common.lib.php:1274 server_status.php:1422
 msgid "MiB"
 msgstr "MiB"
 
-#: js/messages.php:98 libraries/common.lib.php:1274 server_status.php:1433
+#: js/messages.php:98 libraries/common.lib.php:1274 server_status.php:1422
 msgid "KiB"
 msgstr "KiB"
 
@@ -1194,7 +1194,7 @@ msgstr "Prosimo, v serijo dodajte vsaj eno spremenljivko"
 #: js/messages.php:110 libraries/display_export.lib.php:306
 #: libraries/display_tbl.lib.php:561 libraries/export/sql.php:1052
 #: libraries/tbl_properties.inc.php:562 pmd_general.php:510
-#: server_privileges.php:2041 server_status.php:1054 server_status.php:1450
+#: server_privileges.php:2041 server_status.php:1054 server_status.php:1439
 msgid "None"
 msgstr "Brez"
 
@@ -1298,7 +1298,7 @@ msgstr "Spremeni nastavitve"
 msgid "Current settings"
 msgstr "Trenutne nastavitve"
 
-#: js/messages.php:135 server_status.php:1393
+#: js/messages.php:135 server_status.php:1382
 msgid "Chart Title"
 msgstr "Naslov grafikona"
 
@@ -1379,7 +1379,7 @@ msgid "Filter queries by word/regexp:"
 msgstr ""
 
 #: js/messages.php:155
-msgid "Group queries, ignoring variable data in WHERE statements"
+msgid "Group queries, ignoring variable data in WHERE clauses"
 msgstr ""
 
 #: js/messages.php:156
@@ -9899,14 +9899,21 @@ msgid "Monitor Instructions"
 msgstr "Navodila nadziranja"
 
 #: server_status.php:1364
+#, fuzzy
+#| msgid ""
+#| "The phpMyAdmin Monitor can assist you in optimizing the server "
+#| "configuration and track down time intensive\n"
+#| "        queries. For the latter you will need to set log_output to "
+#| "'TABLE' and have either the slow_query_log or general_log enabled. Note "
+#| "however, that the\n"
+#| "        general_log produces a lot of data and increases server load by "
+#| "up to 15%"
 msgid ""
 "The phpMyAdmin Monitor can assist you in optimizing the server configuration "
-"and track down time intensive\n"
-"        queries. For the latter you will need to set log_output to 'TABLE' "
-"and have either the slow_query_log or general_log enabled. Note however, "
-"that the\n"
-"        general_log produces a lot of data and increases server load by up "
-"to 15%"
+"and track down time intensive queries. For the latter you will need to set "
+"log_output to 'TABLE' and have either the slow_query_log or general_log "
+"enabled. Note however, that the general_log produces a lot of data and "
+"increases server load by up to 15%"
 msgstr ""
 "Nadziranje phpMyAdmin vam lahko pomaga pri optimiziranju konfiguracije "
 "strežnika in izsleditvi časovno zahtevnih\n"
@@ -9915,19 +9922,29 @@ msgstr ""
 "        general_log ustvari ogromno podatkov in poveča obremenitev strežnika "
 "do 15 %."
 
-#: server_status.php:1373
+#: server_status.php:1371
+#, fuzzy
+#| msgid ""
+#| "<b>Using the monitor:</b><br/>\n"
+#| "        Ok, you are good to go! Once you click 'Start monitor' your "
+#| "browser will refresh all displayed charts\n"
+#| "        in a regular interval. You may add charts and change the refresh "
+#| "rate under 'Settings', or remove any chart\n"
+#| "        using the cog icon on each respective chart.\n"
+#| "        <p>When you get to see a sudden spike in activity, select the "
+#| "relevant time span on any chart by holding down the\n"
+#| "        left mouse button and panning over the chart. This will load "
+#| "statistics from the logs helping you find what caused the\n"
+#| "        activity spike.</p>"
 msgid ""
-"<b>Using the monitor:</b><br/>\n"
-"        Ok, you are good to go! Once you click 'Start monitor' your browser "
-"will refresh all displayed charts\n"
-"        in a regular interval. You may add charts and change the refresh "
-"rate under 'Settings', or remove any chart\n"
-"        using the cog icon on each respective chart.\n"
-"        <p>When you get to see a sudden spike in activity, select the "
-"relevant time span on any chart by holding down the\n"
-"        left mouse button and panning over the chart. This will load "
-"statistics from the logs helping you find what caused the\n"
-"        activity spike.</p>"
+"<b>Using the monitor:</b><br/> Ok, you are good to go! Once you click 'Start "
+"monitor' your browser will refresh all displayed charts in a regular "
+"interval. You may add charts and change the refresh rate under 'Settings', "
+"or remove any chart using the cog icon on each respective chart.<p>When you "
+"get to see a sudden spike in activity, select the relevant time span on any "
+"chart by holding down the left mouse button and panning over the chart. This "
+"will load statistics from the logs helping you find what caused the activity "
+"spike.</p>"
 msgstr ""
 "<b>Uporaba nadziranja:</b><br/>\n"
 "        V redu, pripravljeni ste! Ko kliknete 'Začni nadziranje', se bo vaš "
@@ -9942,15 +9959,22 @@ msgstr ""
 "statistike iz dnevnikov, kar vam bo pomagalo odkriti vzrok\n"
 "        povečane dejavnosti.</p>"
 
-#: server_status.php:1383
+#: server_status.php:1375
+#, fuzzy
+#| msgid ""
+#| "<b>Please note:</b>\n"
+#| "        Enabling the general_log may increase the server load by 5-15%. "
+#| "Also be aware that generating statistics from the logs is a\n"
+#| "        load intensive task, so it is advisable to select only a small "
+#| "time span and to disable the general_log and empty its table once "
+#| "monitoring is not required any more.\n"
+#| "        "
 msgid ""
-"<b>Please note:</b>\n"
-"        Enabling the general_log may increase the server load by 5-15%. Also "
-"be aware that generating statistics from the logs is a\n"
-"        load intensive task, so it is advisable to select only a small time "
-"span and to disable the general_log and empty its table once monitoring is "
-"not required any more.\n"
-"        "
+"<b>Please note:</b> Enabling the general_log may increase the server load by "
+"5-15%. Also be aware that generating statistics from the logs is a load "
+"intensive task, so it is advisable to select only a small time span and to "
+"disable the general_log and empty its table once monitoring is not required "
+"any more."
 msgstr ""
 "<b>Pomnite:</b>\n"
 "        Omogočitev general_log lahko poveča obremenitev strežnika za 5–15 %. "
@@ -9960,79 +9984,79 @@ msgstr ""
 "ko nadziranja ne potrebujete več.\n"
 "        "
 
-#: server_status.php:1396
+#: server_status.php:1385
 msgid "CPU Usage"
 msgstr "Uporaba CPU"
 
-#: server_status.php:1399
+#: server_status.php:1388
 msgid "Memory Usage"
 msgstr "Uporaba pomnilnika"
 
-#: server_status.php:1402
+#: server_status.php:1391
 msgid "Swap Usage"
 msgstr "Uporaba izmenjevanja"
 
-#: server_status.php:1405
+#: server_status.php:1394
 msgid "Status variable(s)"
 msgstr "Spremenljivke stanja"
 
-#: server_status.php:1407
+#: server_status.php:1396
 msgid "Select series:"
 msgstr "Izberite serije:"
 
-#: server_status.php:1409
+#: server_status.php:1398
 msgid "Commonly monitored"
 msgstr "Pogosto nadzirano"
 
-#: server_status.php:1424
+#: server_status.php:1413
 msgid "or type variable name:"
 msgstr "ali vnesite ime spremenljivke:"
 
-#: server_status.php:1428
+#: server_status.php:1417
 msgid "Display as differential value"
 msgstr "Prikaži kot vrednost razlike"
 
-#: server_status.php:1430
+#: server_status.php:1419
 msgid "Apply a divisor"
 msgstr "Uporabi delitelja"
 
-#: server_status.php:1437
+#: server_status.php:1426
 msgid "Append unit to data values"
 msgstr "Pripni enoto k vrednostim podatkov"
 
-#: server_status.php:1443
+#: server_status.php:1432
 msgid "Add this series"
 msgstr "Dodaj serijo"
 
-#: server_status.php:1445
+#: server_status.php:1434
 msgid "Clear series"
 msgstr "Počisti serije"
 
-#: server_status.php:1448
+#: server_status.php:1437
 msgid "Series in Chart:"
 msgstr "Serije v grafikonu:"
 
-#: server_status.php:1456
+#: server_status.php:1445
 msgid "Loading logs"
 msgstr "Dnevniki nalaganja"
 
-#: server_status.php:1459
+#: server_status.php:1448
 msgid "Log statistics"
 msgstr "Statistika dnevnikov"
 
-#: server_status.php:1460
+#: server_status.php:1449
 msgid "Selected time range:"
 msgstr "Izbrano časovno območje:"
 
-#: server_status.php:1465
+#: server_status.php:1454
 msgid "Only retrieve SELECT,INSERT,UPDATE and DELETE Statements"
 msgstr ""
 
-#: server_status.php:1470
+#: server_status.php:1459
 msgid "Remove variable data in INSERT statements for better grouping"
 msgstr ""
 
-#: server_status.php:1473
+#: server_status.php:1462
 msgid ""
 "<p>Choose from which log you want the statistics to be generated from.</p> "
 "Results are grouped by query text."
@@ -10040,13 +10064,13 @@ msgstr ""
 "<p>Izberite dnevnike, iz katerih želite ustvariti statistiko.</p> Rezultati "
 "so zbrani po besedilu poizvedbe."
 
-#: server_status.php:1476
+#: server_status.php:1465
 #, fuzzy
 #| msgid "Query type"
 msgid "Query analyzer"
 msgstr "Vrsta poizvedbe"
 
-#: server_status.php:1512
+#: server_status.php:1501
 #, php-format
 msgid "%d second"
 msgid_plural "%d seconds"
@@ -10055,7 +10079,7 @@ msgstr[1] "%d sekundi"
 msgstr[2] "%d sekunde"
 msgstr[3] "%d sekund"
 
-#: server_status.php:1514
+#: server_status.php:1503
 #, php-format
 msgid "%d minute"
 msgid_plural "%d minutes"
