Translation update done using Pootle.

--- a/po/fr.po
+++ b/po/fr.po
@@ -10029,10 +10029,9 @@ msgid "CPU Usage"
 msgstr "Utilisation du processeur"
 
 #: server_status.php:1399
-#, fuzzy
 #| msgid "2. Usage"
 msgid "Memory Usage"
-msgstr "2. Utilisation"
+msgstr "Utilisation de la mémoire"
 
 #: server_status.php:1402
 #, fuzzy
