--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 16:29+0200\n"
+"PO-Revision-Date: 2011-07-29 16:30+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -10034,10 +10034,9 @@ msgid "Memory Usage"
 msgstr "Utilisation de la mémoire"
 
 #: server_status.php:1402
-#, fuzzy
 #| msgid "Usage"
 msgid "Swap Usage"
-msgstr "Espace"
+msgstr "Utilisation de la zone d'échange"
 
 #: server_status.php:1405
 #, fuzzy
