Translation update done using Pootle.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1361,10 +1361,9 @@ msgid "Group queries, ignoring variable data in WHERE statements"
 msgstr "Group queries, ignoring variable data in WHERE statements"
 
 #: js/messages.php:156
-#, fuzzy
 #| msgid "Number of inserted rows"
 msgid "Sum of grouped rows:"
-msgstr "Number of inserted rows"
+msgstr "Sum of grouped rows:"
 
 #: js/messages.php:157
 #, fuzzy
