Translation update done using Pootle.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -9818,10 +9818,9 @@ msgid "Refresh rate:"
 msgstr "Refresh rate:"
 
 #: server_status.php:1346
-#, fuzzy
 #| msgid "Textarea columns"
 msgid "Chart columns:"
-msgstr "Textarea columns"
+msgstr "Chart columns:"
 
 #: server_status.php:1360
 #, fuzzy
