Translation update done using Pootle.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -9870,10 +9870,9 @@ msgid ""
 msgstr ""
 
 #: server_status.php:1396
-#, fuzzy
 #| msgid "Usage"
 msgid "CPU Usage"
-msgstr "Usage"
+msgstr "CPU Usage"
 
 #: server_status.php:1399
 #, fuzzy
