Translation update done using Pootle.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -9922,7 +9922,7 @@ msgstr "Add this series"
 
 #: server_status.php:1445
 msgid "Clear series"
-msgstr ""
+msgstr "Clear series"
 
 #: server_status.php:1448
 #, fuzzy
