Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-25 19:31+0200\n"
+"PO-Revision-Date: 2011-07-29 18:28+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -9934,10 +9934,10 @@ msgstr ""
 "çizelgeleri ekleyebilir ve yenileme oranını değiştirebilirsiniz\n"
 "        veya her çizelgenin kendi dişli çark simgesini kullanarak herhangi "
 "bir çizelgeyi kaldırabilirsiniz.\n"
-"        <p>When you get to see a sudden spike in activity, select the "
-"relevant time span on any chart by holding down the        left mouse button "
-"and panning over the chart. This will load statistics from the logs helping "
-"you find what caused the        activity spike.</p>"
+"        <p>Ani hareketlilik gördüğünüzde, herhangi bir çizlgede sol fare "
+"tuşunu basılı tutarak ve çizelge üzerinde kaydırarak ilgili zaman aralığını "
+"seçin. Bu This will load statistics from the logs helping you find what "
+"caused the        activity spike.</p>"
 
 #: server_status.php:1383
 msgid ""
