Translation update done using Pootle.

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1223,10 +1223,9 @@ msgid "slow_query_log is enabled."
 msgstr "\"slow_query_log\" está ativado."
 
 #: js/messages.php:117
-#, fuzzy
 #| msgid "slow_query_log and general_log is disabled."
 msgid "slow_query_log and general_log are disabled."
-msgstr "slow_query_log e general_log estão desativados."
+msgstr "\"slow_query_log\" e \"general_log\" estão desativados."
 
 #: js/messages.php:118
 msgid "log_output is not set to TABLE."
